# CardGame

./: CMakeLists.txt  Makefile  cardlist.txt  cards.sav  deck.sav  decklist.txt  doxfile  playerOne.sav  playerTwo.sav  prohlaseni.txt  rohusdav  zadani.txt
examples/: cardlist.txt  cards.sav  deck.sav  decklist.txt  playerOne.sav  playerTwo.sav
examples/Corrupted cardlist decklist/corrutped cardlist/: cardlist.txt
examples/Corrupted cardlist decklist/corupted decklist/: decklist.txt
examples/saves/Classic/: cards.sav
examples/saves/Corrupted decklist/: playerOne.sav  playerTwo.sav
src/: CCard.cpp  CCard.h  CCardArtefakt.cpp  CCardArtefakt.h  CCardSpell.cpp  CCardSpell.h  CDeck.cpp  CDeck.h  CGame.cpp  CGame.h  CPlayer.cpp  CPlayer.h  CPlayerComputer.cpp  CPlayerComputer.h  CPlayerComputerExpert.cpp  CPlayerComputerExpert.h  CPlayerHuman.cpp  CPlayerHuman.h  CSaveSystem.cpp  CSaveSystem.h  Graphics.cpp  Graphics.h  SEffect.h  main.cpp
